bottom education section fix

--- a/source/markup/education.html
+++ b/source/markup/education.html
@@ -13,313 +13,353 @@
 <body class="page__body">
 	<section class="education container">
 
-		<div class="card education__card">
-			<div class="card__content education__img education__img_inform_btc">
-			</div>
-			<div class="education__wrap">
-				<div class="card__top">
-					<p class="text card__text">
-						4 минуты
+		<h2 class="text education__title">
+			Статьи
+		</h2>
+
+		<div class="education__inner">
+			<div class="card education__card">
+				<div class="card__content education__img education__img_inform_btc">
+				</div>
+				<div class="education__wrap">
+					<div class="card__top">
+						<p class="text card__text">
+							4 минуты
+						</p>
+
+						<a class="link link_level_advanced" href="">
+							Продвинутый
+						</a>
+					</div>
+
+					<h2 class="text education__title">
+						Полное руководство по торговле криптовалютой для начинающих
+					</h2>
+
+					<p class="text">
+						Свечи Hammer - это паттерны, которые могут помочь вам определить потенциальные развороты тренда при торговле
+						на форекс,
+						крипто и других рынках.
 					</p>
 
-					<a class="link link_level_advanced" href="">
-						Продвинутый
-					</a>
-				</div>
+					<div class="content__button-wrap education__button-wrap">
+						<a class="button content__button education__button" href="#">
+							Торговля
+						</a>
 
-				<h2 class="text education__title">
-					Полное руководство по торговле криптовалютой для начинающих
-				</h2>
+						<a class="button content__button" href="#">
+							Основы
+						</a>
 
-				<p class="text">
-					Свечи Hammer - это паттерны, которые могут помочь вам определить потенциальные развороты тренда при торговле
-					на форекс,
-					крипто и других рынках.
-				</p>
+						<a class="button content__button" href="#">
+							Технический анализ
+						</a>
 
-				<div class="content__button-wrap education__button-wrap">
-					<a class="button content__button education__button" href="#">
-						Торговля
-					</a>
-
-					<a class="button content__button" href="#">
-						Основы
-					</a>
-
-					<a class="button content__button" href="#">
-						Технический анализ
-					</a>
-
-					<a class="button content__button" href="#">
-						Экономика
-					</a>
+						<a class="button content__button" href="#">
+							Экономика
+						</a>
+					</div>
 				</div>
 			</div>
-		</div>
 
-		<div class="card education__card">
-			<div class="card__content education__img education__img_inform_mean">
-			</div>
-			<div class="education__wrap">
-				<div class="card__top">
-					<p class="text card__text">
-						4 минуты
+			<div class="card education__card">
+				<div class="card__content education__img education__img_inform_mean">
+				</div>
+				<div class="education__wrap">
+					<div class="card__top">
+						<p class="text card__text">
+							4 минуты
+						</p>
+
+						<a class="link link_level_advanced" href="">
+							Продвинутый
+						</a>
+					</div>
+
+					<h2 class="text education__title">
+Как создать хорошо сбалансированный криптопортфель </h2>
+
+					<p class="text">
+						Узнайте, как фиксировать прибыль, покупать провалы и получать высокодоходные проценты, инвестируя через двойные
+						инвестиции Binance, легко монетизируя свой...
 					</p>
 
-					<a class="link link_level_advanced" href="">
-						Продвинутый
-					</a>
-				</div>
+					<div class="content__button-wrap education__button-wrap">
+						<a class="button content__button education__button" href="#">
+							Торговля
+						</a>
 
-				<h2 class="text education__title">
-					Полное руководство по торговле криптовалютой для начинающих
-				</h2>
+						<a class="button content__button" href="#">
+							Основы
+						</a>
 
-				<p class="text">
-					Свечи Hammer - это паттерны, которые могут помочь вам определить потенциальные развороты тренда при торговле
-					на форекс,
-					крипто и других рынках.
-				</p>
+						<a class="button content__button" href="#">
+							Технический анализ
+						</a>
 
-				<div class="content__button-wrap education__button-wrap">
-					<a class="button content__button education__button" href="#">
-						Торговля
-					</a>
-
-					<a class="button content__button" href="#">
-						Основы
-					</a>
-
-					<a class="button content__button" href="#">
-						Технический анализ
-					</a>
-
-					<a class="button content__button" href="#">
-						Экономика
-					</a>
+						<a class="button content__button" href="#">
+							Экономика
+						</a>
+					</div>
 				</div>
 			</div>
-		</div>
 
-		<div class="card education__card">
-			<div class="card__content education__img education__img_inform_ape">
-			</div>
-			<div class="education__wrap">
-				<div class="card__top">
-					<p class="text card__text">
-						4 минуты
+			<div class="card education__card">
+				<div class="card__content education__img education__img_inform_ape">
+				</div>
+				<div class="education__wrap">
+					<div class="card__top">
+						<p class="text card__text">
+							4 минуты
+						</p>
+
+						<a class="link link_level_advanced" href="">
+							Продвинутый
+						</a>
+					</div>
+
+					<h2 class="text education__title">
+						Что такое ApeCoin (APE)?
+					</h2>
+
+					<p class="text">
+					ApeCoin (APE) - это токен утилиты и управления ERC-20, который расширяет возможности экосистемы APE. Он управляется
+					ApeCo в DAO и поддерживается...
 					</p>
 
-					<a class="link link_level_advanced" href="">
-						Продвинутый
-					</a>
-				</div>
+					<div class="content__button-wrap education__button-wrap">
+						<a class="button content__button education__button" href="#">
+							Торговля
+						</a>
 
-				<h2 class="text education__title">
-					Полное руководство по торговле криптовалютой для начинающих
-				</h2>
+						<a class="button content__button" href="#">
+							Основы
+						</a>
 
-				<p class="text">
-					Свечи Hammer - это паттерны, которые могут помочь вам определить потенциальные развороты тренда при торговле
-					на форекс,
-					крипто и других рынках.
-				</p>
+						<a class="button content__button" href="#">
+							Технический анализ
+						</a>
 
-				<div class="content__button-wrap education__button-wrap">
-					<a class="button content__button education__button" href="#">
-						Торговля
-					</a>
-
-					<a class="button content__button" href="#">
-						Основы
-					</a>
-
-					<a class="button content__button" href="#">
-						Технический анализ
-					</a>
-
-					<a class="button content__button" href="#">
-						Экономика
-					</a>
+						<a class="button content__button" href="#">
+							Экономика
+						</a>
+					</div>
 				</div>
 			</div>
-		</div>
 
-		<div class="card education__card">
-			<div class="card__content education__img education__img_inform_game">
-			</div>
-			<div class="education__wrap">
-				<div class="card__top">
-					<p class="text card__text">
-						4 минуты
+			<div class="card education__card">
+				<div class="card__content education__img education__img_inform_game">
+				</div>
+				<div class="education__wrap">
+					<div class="card__top">
+						<p class="text card__text">
+							4 минуты
+						</p>
+
+						<a class="link link_level_advanced" href="">
+							Продвинутый
+						</a>
+					</div>
+
+					<h2 class="text education__title">
+						Что такое Gamefly и Как Он Работает?
+					</h2>
+
+					<p class="text">
+					Game Fi относится к блокчейн-играм "играй, чтобы заработать", которые предлагают игрокам экономические стимулы.
 					</p>
 
-					<a class="link link_level_advanced" href="">
-						Продвинутый
-					</a>
-				</div>
+					<div class="content__button-wrap education__button-wrap">
+						<a class="button content__button education__button" href="#">
+							Торговля
+						</a>
 
-				<h2 class="text education__title">
-					Полное руководство по торговле криптовалютой для начинающих
-				</h2>
+						<a class="button content__button" href="#">
+							Основы
+						</a>
 
-				<p class="text">
-					Свечи Hammer - это паттерны, которые могут помочь вам определить потенциальные развороты тренда при торговле
-					на форекс,
-					крипто и других рынках.
-				</p>
+						<a class="button content__button" href="#">
+							Технический анализ
+						</a>
 
-				<div class="content__button-wrap education__button-wrap">
-					<a class="button content__button education__button" href="#">
-						Торговля
-					</a>
-
-					<a class="button content__button" href="#">
-						Основы
-					</a>
-
-					<a class="button content__button" href="#">
-						Технический анализ
-					</a>
-
-					<a class="button content__button" href="#">
-						Экономика
-					</a>
+						<a class="button content__button" href="#">
+							Экономика
+						</a>
+					</div>
 				</div>
 			</div>
-		</div>
 
-		<div class="card education__card">
-			<div class="card__content education__img education__img_inform_women">
-			</div>
-			<div class="education__wrap">
-				<div class="card__top">
-					<p class="text card__text">
-						4 минуты
+			<div class="card education__card">
+				<div class="card__content education__img education__img_inform_women">
+				</div>
+				<div class="education__wrap">
+					<div class="card__top">
+						<p class="text card__text">
+							4 минуты
+						</p>
+
+						<a class="link link_level_advanced" href="">
+							Продвинутый
+						</a>
+					</div>
+
+					<h2 class="text education__title">
+						Полное руководство по торговле криптовалютой для начинающих
+					</h2>
+
+					<p class="text">
+						Свечи Hammer - это паттерны, которые могут помочь вам определить потенциальные развороты тренда при торговле
+						на форекс,
+						крипто и других рынках.
 					</p>
 
-					<a class="link link_level_advanced" href="">
-						Продвинутый
-					</a>
-				</div>
+					<div class="content__button-wrap education__button-wrap">
+						<a class="button content__button education__button" href="#">
+							Торговля
+						</a>
 
-				<h2 class="text education__title">
-					Полное руководство по торговле криптовалютой для начинающих
-				</h2>
+						<a class="button content__button" href="#">
+							Основы
+						</a>
 
-				<p class="text">
-					Свечи Hammer - это паттерны, которые могут помочь вам определить потенциальные развороты тренда при торговле
-					на форекс,
-					крипто и других рынках.
-				</p>
+						<a class="button content__button" href="#">
+							Технический анализ
+						</a>
 
-				<div class="content__button-wrap education__button-wrap">
-					<a class="button content__button education__button" href="#">
-						Торговля
-					</a>
-
-					<a class="button content__button" href="#">
-						Основы
-					</a>
-
-					<a class="button content__button" href="#">
-						Технический анализ
-					</a>
-
-					<a class="button content__button" href="#">
-						Экономика
-					</a>
+						<a class="button content__button" href="#">
+							Экономика
+						</a>
+					</div>
 				</div>
 			</div>
-		</div>
 
-		<div class="card education__card">
-			<div class="card__content education__img education__img_inform_woo">
-			</div>
-			<div class="education__wrap">
-				<div class="card__top">
-					<p class="text card__text">
-						4 минуты
+			<div class="card education__card">
+				<div class="card__content education__img education__img_inform_woo">
+				</div>
+				<div class="education__wrap">
+					<div class="card__top">
+						<p class="text card__text">
+							4 минуты
+						</p>
+
+						<a class="link link_level_advanced" href="">
+							Продвинутый
+						</a>
+					</div>
+
+					<h2 class="text education__title">
+						Полное руководство по торговле криптовалютой для начинающих
+					</h2>
+
+					<p class="text">
+						Свечи Hammer - это паттерны, которые могут помочь вам определить потенциальные развороты тренда при торговле
+						на форекс,
+						крипто и других рынках.
 					</p>
 
-					<a class="link link_level_advanced" href="">
-						Продвинутый
-					</a>
-				</div>
+					<div class="content__button-wrap education__button-wrap">
+						<a class="button content__button education__button" href="#">
+							Торговля
+						</a>
 
-				<h2 class="text education__title">
-					Полное руководство по торговле криптовалютой для начинающих
-				</h2>
+						<a class="button content__button" href="#">
+							Основы
+						</a>
 
-				<p class="text">
-					Свечи Hammer - это паттерны, которые могут помочь вам определить потенциальные развороты тренда при торговле
-					на форекс,
-					крипто и других рынках.
-				</p>
+						<a class="button content__button" href="#">
+							Технический анализ
+						</a>
 
-				<div class="content__button-wrap education__button-wrap">
-					<a class="button content__button education__button" href="#">
-						Торговля
-					</a>
-
-					<a class="button content__button" href="#">
-						Основы
-					</a>
-
-					<a class="button content__button" href="#">
-						Технический анализ
-					</a>
-
-					<a class="button content__button" href="#">
-						Экономика
-					</a>
+						<a class="button content__button" href="#">
+							Экономика
+						</a>
+					</div>
 				</div>
 			</div>
-		</div>
 
-		<div class="card education__card">
-			<div class="card__content education__img education__img_inform_coti">
-			</div>
-			<div class="education__wrap">
-				<div class="card__top">
-					<p class="text card__text">
-						4 минуты
+			<div class="card education__card">
+				<div class="card__content education__img education__img_inform_coti">
+				</div>
+				<div class="education__wrap">
+					<div class="card__top">
+						<p class="text card__text">
+							4 минуты
+						</p>
+
+						<a class="link link_level_advanced" href="">
+							Продвинутый
+						</a>
+					</div>
+
+					<h2 class="text education__title">
+						Полное руководство по торговле криптовалютой для начинающих
+					</h2>
+
+					<p class="text">
+						Свечи Hammer - это паттерны, которые могут помочь вам определить потенциальные развороты тренда при торговле
+						на форекс,
+						крипто и других рынках.
 					</p>
 
-					<a class="link link_level_advanced" href="">
-						Продвинутый
-					</a>
-				</div>
+					<div class="content__button-wrap education__button-wrap">
+						<a class="button content__button education__button" href="#">
+							Торговля
+						</a>
 
-				<h2 class="text education__title">
-					Полное руководство по торговле криптовалютой для начинающих
-				</h2>
+						<a class="button content__button" href="#">
+							Основы
+						</a>
 
-				<p class="text">
-					Свечи Hammer - это паттерны, которые могут помочь вам определить потенциальные развороты тренда при торговле
-					на форекс,
-					крипто и других рынках.
-				</p>
+						<a class="button content__button" href="#">
+							Технический анализ
+						</a>
 
-				<div class="content__button-wrap education__button-wrap">
-					<a class="button content__button education__button" href="#">
-						Торговля
-					</a>
-
-					<a class="button content__button" href="#">
-						Основы
-					</a>
-
-					<a class="button content__button" href="#">
-						Технический анализ
-					</a>
-
-					<a class="button content__button" href="#">
-						Экономика
-					</a>
+						<a class="button content__button" href="#">
+							Экономика
+						</a>
+					</div>
 				</div>
 			</div>
+
+			<a class="button button_form_none education__link" href="#">
+				Показать еще
+			</a>
+
+			<nav class="education__nav">
+				<button class="button button_form_none">
+					<svg width="6" height="9" viewBox="0 0 6 9" fill="none" xmlns="http://www.w3.org/2000/svg">
+						<path
+							d="M2.18154 4.5L5.40726 7.45683C5.72595 7.74895 5.72595 8.25136 5.40726 8.54348C5.12548 8.80178 4.69298 8.80178 4.4112 8.54348L0.804202 5.23716C0.37182 4.84083 0.37182 4.15917 0.804202 3.76284L4.4112 0.456518C4.69298 0.198221 5.12548 0.198221 5.40727 0.456518C5.72595 0.748638 5.72595 1.25105 5.40726 1.54317L2.18154 4.5Z"
+							fill="#A6A7B0" />
+					</svg>
+
+				</button>
+				<ul class="menu education__menu">
+					<li class="education__item">
+						<a class="button button_form_none education__nav-link education__nav-link_focus_active" href="">
+							1
+						</a>
+					</li>
+					<li class="education__item">
+						<a class="button button_form_none education__nav-link" href="">
+							2
+						</a>
+					</li>
+					<li class="education__item">
+						<a class="button button_form_none education__nav-link" href="">
+							3
+						</a>
+					</li>
+				</ul>
+				<button class="button button_form_none">
+					<svg width="6" height="9" viewBox="0 0 6 9" fill="none" xmlns="http://www.w3.org/2000/svg">
+						<path
+							d="M3.81846 4.5L0.592736 1.54317C0.27405 1.25105 0.274049 0.748638 0.592735 0.456518C0.874522 0.19822 1.30702 0.19822 1.5888 0.456518L5.1958 3.76284C5.62818 4.15917 5.62818 4.84083 5.1958 5.23716L1.5888 8.54348C1.30702 8.80178 0.874522 8.80178 0.592735 8.54348C0.274049 8.25136 0.274049 7.74895 0.592735 7.45683L3.81846 4.5Z"
+							fill="#A6A7B0" />
+					</svg>
+				</button>
 		</div>
+		</nav>
 	</section>
 
 	<footer class="footer container">
