grid section top end

--- a/source/markup/education-2.html
+++ b/source/markup/education-2.html
@@ -18,7 +18,6 @@
 		</h2>
 
 		<div class="education__inner">
-
 			<div class="card education__card education-2__card div1">
 				<div class="card__content education__img education__img_inform_ape education-2__img">
 				</div>
@@ -64,44 +63,33 @@
 			</div>
 
 			<div class="card education__card education-2__card_size_big div2">
-
-				<div class="card__content education__img education__img_inform_game education-2__img_binance">
-
-				</div>
-
+				<div class="card__content education__img education__img_inform_game education-2__img_binance"></div>
 				<div class="education__wrap education-2__wrap">
-					<div class="card__top">
+					<div class="card__top education-2__column">
 						<p class="text card__text">
 							4 минуты
 						</p>
-
 						<a class="link link_level_advanced" href="">
 							Продвинутый
 						</a>
 					</div>
-
 					<h2 class="text education__title">
 						12 популярных свечных моделей и паттернов, используемых в техническом анализе
 					</h2>
-
 					<p class="text education-2__text">
 						Game Fi относится к блокчейн-играм "играй, чтобы заработать", которые предлагают игрокам экономические
 						стимулы.
 					</p>
-
 					<div class="content__button-wrap education__button-wrap education-2__button-wrap--top">
 						<a class="button content__button education__button" href="#">
 							Торговля
 						</a>
-
 						<a class="button content__button" href="#">
 							Основы
 						</a>
-
 						<a class="button content__button" href="#">
 							Технический анализ
 						</a>
-
 						<a class="button content__button" href="#">
 							Экономика
 						</a>
@@ -110,44 +98,33 @@
 			</div>
 
 			<div class="card education__card education-2__card_size_big div3">
-
-				<div class="card__content education__img education__img_inform_game education-2__img_meanbnb">
-
-				</div>
-
+				<div class="card__content education__img education__img_inform_game education-2__img_binance education-2__img_mean"></div>
 				<div class="education__wrap education-2__wrap">
-					<div class="card__top">
+					<div class="card__top education-2__column">
 						<p class="text card__text">
 							4 минуты
 						</p>
-
 						<a class="link link_level_advanced" href="">
 							Продвинутый
 						</a>
 					</div>
-
 					<h2 class="text education__title">
 						Как начать работу с Binance Smart за 60 секунд
 					</h2>
-
 					<p class="text education-2__text">
 						Game Fi относится к блокчейн-играм "играй, чтобы заработать", которые предлагают игрокам экономические
 						стимулы.
 					</p>
-
 					<div class="content__button-wrap education__button-wrap education-2__button-wrap--top">
 						<a class="button content__button education__button" href="#">
 							Торговля
 						</a>
-
 						<a class="button content__button" href="#">
 							Основы
 						</a>
-
 						<a class="button content__button" href="#">
 							Технический анализ
 						</a>
-
 						<a class="button content__button" href="#">
 							Экономика
 						</a>
@@ -156,29 +133,24 @@
 			</div>
 
 			<div class="card education__card education-2__card div4">
-				<div class="card__content education__img education__img_inform_ape education-2__img">
-				</div>
+				<div class="card__content education__img education__img_inform_ape education-2__img"></div>
 				<div class="education__wrap education-2__wrap">
 					<div class="card__top education-2__top">
 						<p class="text card__text">
 							6 минут
 						</p>
-
 						<a class="link link_level_pro" href="#">
 							Профессионал
 						</a>
 					</div>
-
 					<h2 class="text education__title">
 						Что такое усреднение долларовой стоимости (DCA)?
 					</h2>
-
 					<p class="text education-2__text">
 						ApeCoin (APE) - это токен утилиты и управления ERC-20, который расширяет возможности экосистемы APE. Он
 						управляется
 						ApeCo в DAO и поддерживается...
 					</p>
-
 					<div class="content__button-wrap education__button-wrap education-2__button-wrap">
 						<a class="button content__button education__button education-2__button" href="#">
 							Binance
@@ -187,58 +159,47 @@
 				</div>
 			</div>
 
-	<div class="card education__card education-2__card_size_big div5">
-
-		<div class="card__content education__img education__img_inform_game education-2__img_bitok">
-
-		</div>
-
-		<div class="education__wrap education-2__wrap">
-			<div class="card__top">
-				<p class="text card__text">
-					4 минуты
-				</p>
-
-				<a class="link link_level_advanced" href="">
-					Продвинутый
-				</a>
+			<div class="card education__card education-2__card_size_big div5">
+				<div class="card__content education__img education__img_inform_game education-2__img_bitok"></div>
+				<div class="education__wrap education-2__wrap">
+					<div class="card__top ">
+						<p class="text card__text">
+							4 минуты
+						</p>
+						<a class="link link_level_advanced" href="">
+							Продвинутый
+						</a>
+					</div>
+					<h2 class="text education__title">
+						История цен биткоина
+					</h2>
+					<p class="text education-2__text">
+						Game Fi относится к блокчейн-играм "играй, чтобы заработать", которые предлагают игрокам экономические
+						стимулы.
+					</p>
+					<div
+						class="content__button-wrap education__button-wrap education-2__button-wrap--top education-2__button-wrap--bottom">
+						<a class="button content__button education__button" href="#">
+							Торговля
+						</a>
+						<a class="button content__button" href="#">
+							Основы
+						</a>
+						<a class="button content__button" href="#">
+							Технический анализ
+						</a>
+						<a class="button content__button" href="#">
+							Экономика
+						</a>
+					</div>
+				</div>
 			</div>
-
-			<h2 class="text education__title">
-				История цен биткоина
-			</h2>
-
-			<p class="text education-2__text">
-				Game Fi относится к блокчейн-играм "играй, чтобы заработать", которые предлагают игрокам экономические
-				стимулы.
-			</p>
-
-			<div class="content__button-wrap education__button-wrap education-2__button-wrap--top">
-				<a class="button content__button education__button" href="#">
-					Торговля
-				</a>
-
-				<a class="button content__button" href="#">
-					Основы
-				</a>
-
-				<a class="button content__button" href="#">
-					Технический анализ
-				</a>
-
-				<a class="button content__button" href="#">
-					Экономика
-				</a>
-			</div>
-		</div>
-	</div>
 		</div>
 
 		<div class="education-2__nav">
 			<a class="button button_form_none education__link" href="#">
 				Показать еще
 			</a>
-
 			<nav class="education__nav">
 				<button class="button button_form_none">
 					<svg width="6" height="9" viewBox="0 0 6 9" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -246,7 +207,6 @@
 							d="M2.18154 4.5L5.40726 7.45683C5.72595 7.74895 5.72595 8.25136 5.40726 8.54348C5.12548 8.80178 4.69298 8.80178 4.4112 8.54348L0.804202 5.23716C0.37182 4.84083 0.37182 4.15917 0.804202 3.76284L4.4112 0.456518C4.69298 0.198221 5.12548 0.198221 5.40727 0.456518C5.72595 0.748638 5.72595 1.25105 5.40726 1.54317L2.18154 4.5Z"
 							fill="#A6A7B0" />
 					</svg>
-
 				</button>
 				<ul class="menu education__menu">
 					<li class="education__item">
@@ -272,7 +232,6 @@
 							fill="#A6A7B0" />
 					</svg>
 				</button>
-
 			</nav>
 		</div>
 	</section>
