styles section 4 fix

--- a/source/markup/education-2.html
+++ b/source/markup/education-2.html
@@ -13,11 +13,29 @@
 <body class="page__body">
 	<section class="education container education-2">
 
-		<h2 class="text education__title">
+		<article class="filter education__filter">
+			<div class="content__top">
+				<a class="link content_link" href="#">
+					Главная
+				</a>
+				<a class="link content_link" href="#">
+					Статьи
+				</a>
+				<a class="link content_link" href="#">
+					Что такое фан-токен ФК «Порту» (PORTO)?
+				</a>
+			</div>
+
+			<h2 class="text education__title">
+				Навигация
+			</h2>
+		</article>
+
+		<h2 class="text education__title education-2__title">
 			Образовательные статьи
 		</h2>
 
-		<div class="education__inner">
+		<div class="education__inner education-2__inner">
 			<div class="card education__card education-2__card div1">
 				<div class="card__content education__img education__img_inform_ape education-2__img">
 				</div>
@@ -98,7 +116,9 @@
 			</div>
 
 			<div class="card education__card education-2__card_size_big div3">
-				<div class="card__content education__img education__img_inform_game education-2__img_binance education-2__img_mean"></div>
+				<div
+					class="card__content education__img education__img_inform_game education-2__img_binance education-2__img_mean">
+				</div>
 				<div class="education__wrap education-2__wrap">
 					<div class="card__top education-2__column">
 						<p class="text card__text">
@@ -179,6 +199,188 @@
 					</p>
 					<div
 						class="content__button-wrap education__button-wrap education-2__button-wrap--top education-2__button-wrap--bottom">
+						<a class="button content__button education__button" href="#">
+							Торговля
+						</a>
+						<a class="button content__button" href="#">
+							Основы
+						</a>
+						<a class="button content__button" href="#">
+							Технический анализ
+						</a>
+						<a class="button content__button" href="#">
+							Экономика
+						</a>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<div class="education__inner education__inner-bottom">
+			<div class="card education__card education-2__card div1">
+				<div class="card__content education__img education__img_inform_ape education-2__img">
+				</div>
+				<div class="education__wrap education-2__wrap">
+					<div class="card__top education-2__top">
+						<p class="text card__text">
+							63 минуты
+						</p>
+
+						<a class="link link_level_new" href="#">
+							Новичек
+						</a>
+					</div>
+
+					<h2 class="text education__title">
+						Лучшие криптовалютные кошельки для Binance Smart Chain (BSC)
+					</h2>
+
+					<p class="text education-2__text">
+						ApeCoin (APE) - это токен утилиты и управления ERC-20, который расширяет возможности экосистемы APE. Он
+						управляется
+						ApeCo в DAO и поддерживается...
+					</p>
+
+					<div class="content__button-wrap education__button-wrap education-2__button-wrap">
+						<a class="button content__button education__button education-2__button" href="#">
+							Торговля
+						</a>
+
+						<a class="button content__button education-2__button" href="#">
+							Основы
+						</a>
+
+						<a class="button content__button education-2__button" href="#">
+							Технический анализ
+						</a>
+
+						<a class="button content__button education-2__button" href="#">
+							+1
+						</a>
+					</div>
+				</div>
+			</div>
+
+			<div class="card education__card education-2__card_size_big div2">
+				<div
+					class="card__content education__img education__img_inform_game education-2__img_binance education-2__img_meta">
+				</div>
+				<div class="education__wrap education-2__wrap">
+					<div class="card__top education-2__column">
+						<p class="text card__text">
+							7 минут
+						</p>
+						<a class="link link_level_advanced" href="">
+							Продвинутый
+						</a>
+					</div>
+					<h2 class="text education__title">
+						Что такое метавселенная?
+					</h2>
+					<p class="text education-2__text">
+						Game Fi относится к блокчейн-играм "играй, чтобы заработать", которые предлагают игрокам экономические
+						стимулы.
+					</p>
+					<div class="content__button-wrap education__button-wrap education-2__button-wrap--top">
+						<a class="button content__button education__button" href="#">
+							Торговля
+						</a>
+						<a class="button content__button" href="#">
+							Основы
+						</a>
+						<a class="button content__button" href="#">
+							+2
+						</a>
+					</div>
+				</div>
+			</div>
+
+			<div class="card education__card education-2__card_size_big div3">
+				<div class="card__content education__img education__img_inform_game education-2__img_binance education-2__img_mean
+					education-2__img_cir">
+				</div>
+				<div class="education__wrap education-2__wrap">
+					<div class="card__top education-2__column">
+						<p class="text card__text">
+							12 минут
+						</p>
+						<a class="link link_level_advanced" href="">
+							Продвинутый
+						</a>
+					</div>
+					<h2 class="text education__title">
+						Как торговать фьючерсными ..
+					</h2>
+					<p class="text education-2__text">
+						Game Fi относится к блокчейн-играм "играй, чтобы заработать", которые предлагают игрокам экономические
+						стимулы.
+					</p>
+					<div class="content__button-wrap education__button-wrap education-2__button-wrap--top">
+						<a class="button content__button education__button" href="#">
+							Торговля
+						</a>
+						<a class="button content__button" href="#">
+							Основы
+						</a>
+						<a class="button content__button" href="#">
+							DeFi
+						</a>
+						<a class="button content__button" href="#">
+							+1
+						</a>
+					</div>
+				</div>
+			</div>
+
+			<div class="card education__card education-2__card div4">
+				<div class="card__content education__img education__img_inform_ape education-2__img"></div>
+				<div class="education__wrap education-2__wrap">
+					<div class="card__top education-2__top">
+						<p class="text card__text">
+							6 минут
+						</p>
+						<a class="link link_level_pro" href="#">
+							Профессионал
+						</a>
+					</div>
+					<h2 class="text education__title">
+						Как создать хорошо сбалансированный криптопортфель
+					</h2>
+					<p class="text education-2__text">
+						ApeCoin (APE) - это токен утилиты и управления ERC-20, который расширяет возможности экосистемы APE. Он
+						управляется
+						ApeCo в DAO и поддерживается...
+					</p>
+					<div class="content__button-wrap education__button-wrap education-2__button-wrap">
+						<a class="button content__button education__button education-2__button" href="#">
+							Binance
+						</a>
+					</div>
+				</div>
+			</div>
+
+			<div class="card education__card education-2__card_size_big div5">
+				<div
+					class="card__content education__img education__img_inform_game education-2__img_bitok education-2__img_portu">
+				</div>
+				<div class="education__wrap education-2__wrap">
+					<div class="card__top ">
+						<p class="text card__text">
+							6 минут
+						</p>
+						<a class="link link_level_advanced" href="">
+							Продвинутый
+						</a>
+					</div>
+					<h2 class="text education__title">
+						Что такое фан-токен...
+					</h2>
+					<p class="text education-2__text">
+						Game Fi относится к блокчейн-играм "играй, чтобы заработать", которые предлагают игрокам экономические
+						стимулы.
+					</p>
+					<div class="content__button-wrap education__button-wrap education-2__button-wrap--top
+						education-2__button-wrap--bottom">
 						<a class="button content__button education__button" href="#">
 							Торговля
 						</a>
