--- a/source/markup/education-2.html
+++ b/source/markup/education-2.html
@@ -16,19 +16,91 @@
 		<article class="filter education__filter">
 			<div class="content__top">
 				<a class="link content_link" href="#">
-					Главная
+					Главная >
 				</a>
 				<a class="link content_link" href="#">
 					Статьи
-				</a>
-				<a class="link content_link" href="#">
-					Что такое фан-токен ФК «Порту» (PORTO)?
 				</a>
 			</div>
 
 			<h2 class="text education__title">
 				Навигация
 			</h2>
+			<div class="filter__top">
+				<a class="button button_form_clear filter__button" href="">
+					Образовательные статьи
+				</a>
+
+				<a class="button button_form_none" href="">
+					Новостные статьи
+				</a>
+			</div>
+
+			<div class="filter__all">
+				<a class="button filter__button-link filter__button-link_state_ok" href="">
+					Altcoin ✓
+				</a>
+
+				<a class="button filter__button-link" href="">
+					Binance +
+				</a>
+
+				<a class="button filter__button-link" href="">
+					Биткоин +
+				</a>
+
+				<a class="button filter__button-link" href="">
+					Блокчейн +
+				</a>
+
+				<a class="button filter__button-link filter__button-link filter__button-link_state_ok" href="">
+					Консенсус ✓
+				</a>
+
+				<a class="button filter__button-link" href="">
+					DeFi +
+				</a>
+
+				<a class="button filter__button-link" href="">
+					Технический анализ +
+				</a>
+
+				<a class="button filter__button-link" href="">
+					Еще+12
+				</a>
+			</div>
+
+			<div class="filter__level">
+				<h2 class="text">
+					Уровень
+				</h2>
+
+				<div class="filter__level-wrap">
+					<a class="link link_level_new" href="#">
+						Новичек
+					</a>
+					<a class="link link_level_advanced" href="#">
+						Продвинутый +
+					</a>
+					<a class="link link_level_pro" href="#">
+						Профессионал +
+					</a>
+				</div>
+			</div>
+
+			<div class="filter__time">
+				<h2 class="text">
+					Время прочтения
+				</h2>
+
+				<div class="filter__time-scrol">
+
+				</div>
+			</div>
+
+			<div class="filter__bottom">
+
+			</div>
 		</article>
 
 		<h2 class="text education__title education-2__title">
