footer social ul fix

--- a/source/markup/education.html
+++ b/source/markup/education.html
@@ -77,10 +77,11 @@
 					</div>
 
 					<h2 class="text education__title">
-Как создать хорошо сбалансированный криптопортфель </h2>
+						Как создать хорошо сбалансированный криптопортфель </h2>
 
 					<p class="text">
-						Узнайте, как фиксировать прибыль, покупать провалы и получать высокодоходные проценты, инвестируя через двойные
+						Узнайте, как фиксировать прибыль, покупать провалы и получать высокодоходные проценты, инвестируя через
+						двойные
 						инвестиции Binance, легко монетизируя свой...
 					</p>
 
@@ -123,8 +124,9 @@
 					</h2>
 
 					<p class="text">
-					ApeCoin (APE) - это токен утилиты и управления ERC-20, который расширяет возможности экосистемы APE. Он управляется
-					ApeCo в DAO и поддерживается...
+						ApeCoin (APE) - это токен утилиты и управления ERC-20, который расширяет возможности экосистемы APE. Он
+						управляется
+						ApeCo в DAO и поддерживается...
 					</p>
 
 					<div class="content__button-wrap education__button-wrap">
@@ -166,7 +168,8 @@
 					</h2>
 
 					<p class="text">
-					Game Fi относится к блокчейн-играм "играй, чтобы заработать", которые предлагают игрокам экономические стимулы.
+						Game Fi относится к блокчейн-играм "играй, чтобы заработать", которые предлагают игрокам экономические
+						стимулы.
 					</p>
 
 					<div class="content__button-wrap education__button-wrap">
@@ -364,9 +367,13 @@
 
 	<footer class="footer container">
 		<div class="footer__top">
-			<div class="footer__img-wrap">
-				<img class="logo footer__logo" src="assets/images/logo.svg" alt="логотип">
-			</div>
+
+			<a class="footer__img-wrap">
+				<svg class="social__icon" width="39" height="39" aria-hidden="true" focusable="false">
+					<use href="assets/images/svg/sprite.svg#logo">
+					</use>
+				</svg>
+			</a>
 
 			<p class="text footer__lang footer__lang_media_desktop">
 				RU
@@ -377,18 +384,49 @@
 				All rights reserved.
 			</p>
 
-			<div class="footer__social_media_desktop">
-				<div class="footer__icon footer__icon_net_telegramm"> </div>
+			<ul class="menu footer__social_media_desktop">
+				<li class="footer__icon footer__icon_net_telegramm">
+					<a class="footer__social-link" href="">
+						<svg class="social__icon" width="39" height="39" aria-hidden="true" focusable="false">
+							<use href="assets/images/svg/sprite.svg#telegramm"></use>
+						</svg>
+						<span class="acces">telegramm</span>
+					</a>
+				</li>
 
-				<div class="footer__icon footer__icon_net_youtube"> </div>
+				<li class="footer__icon footer__icon_net_youtube">
+					<a class="footer__social-link" href="">
+						<svg class="social__icon" width="39" height="39" aria-hidden="true" focusable="false">
+							<use href="assets/images/svg/sprite.svg#youtube"></use>
+						</svg>
+							<span class="acces">youtube</span>
+					</a>
+				</li>
 
-				<div class="footer__icon footer__icon_net_inst"> </div>
+				<li class="footer__icon footer__icon_net_inst">
+					<a class="footer__social-link" href="">
+						<svg class="social__icon" width="39" height="39" aria-hidden="true" focusable="false">
+							<use href="assets/images/svg/sprite.svg#inst"></use>
+						</svg>
+					</a>
+				</li>
 
-				<div class="footer__icon footer__icon_net_facebook"> </div>
+				<li class="footer__icon footer__icon_net_facebook">
+					<a class="footer__social-link" href="">
+						<svg class="social__icon" width="39" height="39" aria-hidden="true" focusable="false">
+							<use href="assets/images/svg/sprite.svg#facebook"></use>
+						</svg>
+					</a>
+				</li>
 
-				<div class="footer__icon footer__icon_net_discord"> </div>
-			</div>
-
+				<li class="footer__icon footer__icon_net_discord">
+					<a class="footer__social-link" href="">
+						<svg class="social__icon" width="39" height="39" aria-hidden="true" focusable="false">
+							<use href="assets/images/svg/sprite.svg#discord"></use>
+						</svg>
+					</a>
+				</li>
+			</ul>
 			<div class="footer__load_media_desktop">
 				<img class="footer__img" src="assets/images/footer/appstore.png" alt="appstore">
 				<img class="footer__img" src="assets/images/footer/googleplay.png" alt="googleplay">
@@ -510,17 +548,47 @@
 			<img class="footer__img" src="assets/images/footer/googleplay.png" alt="googleplay">
 		</div>
 
-		<div class="footer__social">
-			<div class="footer__icon footer__icon_net_telegramm"> </div>
+		<ul class="menu footer__social">
+			<li class="footer__icon footer__icon_net_telegramm">
+				<a class="footer__social-link" href="">
+					<svg class="social__icon" width="39" height="39" aria-hidden="true" focusable="false">
+						<use href="assets/images/svg/sprite.svg#telegramm"></use>
+					</svg>
+				</a>
+			</li>
 
-			<div class="footer__icon footer__icon_net_youtube"> </div>
+			<li class="footer__icon footer__icon_net_youtube">
+				<a class="footer__social-link" href="">
+					<svg class="social__icon" width="39" height="39" aria-hidden="true" focusable="false">
+						<use href="assets/images/svg/sprite.svg#youtube"></use>
+					</svg>
+				</a>
+			</li>
 
-			<div class="footer__icon footer__icon_net_inst"> </div>
+			<li class="footer__icon footer__icon_net_inst">
+				<a class="footer__social-link" href="">
+					<svg class="social__icon" width="39" height="39" aria-hidden="true" focusable="false">
+						<use href="assets/images/svg/sprite.svg#inst"></use>
+					</svg>
+				</a>
+			</li>
 
-			<div class="footer__icon footer__icon_net_facebook"> </div>
+			<li class="footer__icon footer__icon_net_facebook">
+				<a class="footer__social-link" href="">
+					<svg class="social__icon" width="39" height="39" aria-hidden="true" focusable="false">
+						<use href="assets/images/svg/sprite.svg#facebook"></use>
+					</svg>
+				</a>
+			</li>
 
-			<div class="footer__icon footer__icon_net_discord"> </div>
-		</div>
+			<li class="footer__icon footer__icon_net_discord">
+				<a class="footer__social-link" href="">
+					<svg class="social__icon" width="39" height="39" aria-hidden="true" focusable="false">
+						<use href="assets/images/svg/sprite.svg#discord"></use>
+					</svg>
+				</a>
+			</li>
+		</ul>
 
 		<p class="text footer__text_size_smal">
 			Copyright © 2022 Bithoven.com.
