--- a/source/markup/header.html
+++ b/source/markup/header.html
@@ -12,29 +12,60 @@
 
 <body class="page__body">
 	<header class="header">
-
-		<section class="header__menu">
-
+		<div class="header__menu-wrap">
 			<div class="header__menu-top">
-				<button class="button_form_none header__button-nav" type="button">
-					Темы
-				</button>
+				<div class="header__user-wrap">
+					<button class="button_form_none  header__button-deck " type="button">
+						<svg class="header__svg" width="22" height="22" aria-hidden="true" focusable="false">
+							<use href="assets/images/svg/sprite.svg#deck"></use>
+						</svg>
+					</button>
 
-				<div class="header__user-nav">
+					<button class="button_form_none header__button-learn" type="button">
+						Узнать
+					</button>
 
-						<button class="button_form_none header__button-brig" type="button">
-							<svg class="social__icon-brig" width="10" height="10" aria-hidden="true" focusable="false">
-								<use href="assets/images/svg/sprite.svg#brig"></use>
-							</svg>
-						</button>
+					<button class="button_form_none header__button-nav " type="button">
+						Темы
+					</button>
+				</div>
 
+				<a class="link header__logo" href="#">
+					<img src="assets/images/logo.svg" alt="логотип криптобиржи Bithoven">
+				</a>
 
-					<button class="button_form_none header__button-onof" type="button">
-						<svg class="social__icon" width="18" height="18" aria-hidden="true" focusable="false">
+				<div class="header__user-nav header__user-nav_media_deck ">
+
+					<button class="button_form_none header__button-onof " type="button">
+						<svg class="header__svg" width="18" height="18" aria-hidden="true" focusable="false">
 							<use href="assets/images/svg/sprite.svg#onof"></use>
 						</svg>
 					</button>
+
+
+					<button class="button_form_none header__button-acc" type="button">
+						<svg class="header__svg" width="25" height="25" aria-hidden="true" focusable="false">
+							<use href="assets/images/svg/sprite.svg#acc"></use>
+						</svg>
+					</button>
+
+
+					<button class="button_form_none header__button-leng" type="button">
+						RU
+					</button>
+
+
+					<button class="button_form_none header__button-sedes" type="button">
+						<svg class="header__svg" width="13" height="14" aria-hidden="true" focusable="false">
+							<use href="assets/images/svg/sprite.svg#sedes"></use>
+						</svg>
+					</button>
 				</div>
+
+				<button class="button button_color_yellow header__aut">
+					Авторизация
+				</button>
+
 			</div>
 
 			<div class="header__themes">
@@ -108,40 +139,39 @@
 					</a>
 				</li>
 			</ul>
-		</section>
-
-
+		</div>
 
 		<nav class="header__nav">
-			<button class="button_form_none header__button header__button_type_home" type="button">
-				<svg class="social__icon" width="16" height="17" aria-hidden="true" focusable="false">
+			<button class="button_form_none header__button-bottom header__button_type_home" type="button">
+				<svg class="header__svg" width="16" height="17" aria-hidden="true" focusable="false">
 					<use href="assets/images/svg/sprite.svg#home"></use>
 				</svg>
 				Главная
 			</button>
 
-			<button class="button_form_none header__button header__button_type_search" type="button">
-				<svg class="social__icon" width="18" height="18" aria-hidden="true" focusable="false">
+			<button class="button_form_none header__button-bottom header__button_type_search" type="button">
+				<svg class="header__svg" width="18" height="18" aria-hidden="true" focusable="false">
 					<use href="assets/images/svg/sprite.svg#search"></use>
 				</svg>
 				Поиск
 			</button>
 
-			<button class="button_form_none header__button header__button_type_profile" type="button">
-				<svg class="social__icon" width="19" height="18" aria-hidden="true" focusable="false">
+			<button class="button_form_none header__button-bottom header__button_type_profile" type="button">
+				<svg class="header__svg" width="19" height="18" aria-hidden="true" focusable="false">
 					<use href="assets/images/svg/sprite.svg#profile"></use>
 				</svg>
 				Профиль
 			</button>
 
-			<button class="button_form_none header__button header__button_type_menu" type="button">
-				<svg class="social__icon" width="22" height="18" aria-hidden="true" focusable="false">
+			<button class="button_form_none header__button-bottom header__button_type_menu" type="button">
+				<svg class="header__svg" width="22" height="18" aria-hidden="true" focusable="false">
 					<use href="assets/images/svg/sprite.svg#menu"></use>
 				</svg>
 				Меню
 			</button>
 		</nav>
 	</header>
+
 	<script src="assets/scripts/index.js"></script>
 	<script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
 </body>
