--- a/source/markup/auth.html
+++ b/source/markup/auth.html
@@ -11,7 +11,7 @@
 </head>
 
 <body class="page__body">
-	<header class="header">
+	<header class="header header_display_non">
 		<div class="header__menu-wrap">
 			<div class="header__menu-top">
 				<div class="header__user-wrap">
@@ -68,7 +68,7 @@
 
 			</div>
 
-			<div class="header__themes">
+			<div class="header__themes--noactive  header__themes_media_desk">
 				<a class="button header__button-link" href="#">
 					Altcoin
 				</a>
@@ -141,7 +141,7 @@
 			</ul>
 		</div>
 
-		<nav class="header__nav">
+		<nav class="header__nav header__nav_display_non">
 			<button class="button_form_none header__button-bottom header__button_type_home" type="button">
 				<svg class="header__svg" width="16" height="17" aria-hidden="true" focusable="false">
 					<use href="assets/images/svg/sprite.svg#home"></use>
@@ -171,8 +171,14 @@
 			</button>
 		</nav>
 	</header>
-	
+
 	<section class="auth container">
+		<button class="button_form_none header__button-onof" type="button">
+			<svg class="header__svg" width="18" height="18" aria-hidden="true" focusable="false">
+				<use href="assets/images/svg/sprite.svg#onof"></use>
+			</svg>
+		</button>
+
 		<h1 class="title auth__title">
 			Вам нужен кошелек Ethereum,
 			чтобы использовать Bithoven
@@ -214,15 +220,44 @@
 				У вас еще нет притокашелька?
 			</p>
 
-				<a class="button auth__button">
-					Как подключить
-				</a>
+			<a class="button auth__button">
+				Как подключить
+			</a>
 		</div>
+
+		<nav class="header__nav">
+			<button class="button_form_none header__button-bottom header__button_type_home" type="button">
+				<svg class="header__svg" width="16" height="17" aria-hidden="true" focusable="false">
+					<use href="assets/images/svg/sprite.svg#home"></use>
+				</svg>
+				Главная
+			</button>
+
+			<button class="button_form_none header__button-bottom header__button_type_search" type="button">
+				<svg class="header__svg" width="18" height="18" aria-hidden="true" focusable="false">
+					<use href="assets/images/svg/sprite.svg#search"></use>
+				</svg>
+				Поиск
+			</button>
+
+			<button class="button_form_none header__button-bottom header__button_type_profile" type="button">
+				<svg class="header__svg" width="19" height="18" aria-hidden="true" focusable="false">
+					<use href="assets/images/svg/sprite.svg#profile"></use>
+				</svg>
+				Профиль
+			</button>
+
+			<button class="button_form_none header__button-bottom header__button_type_menu" type="button">
+				<svg class="header__svg" width="22" height="18" aria-hidden="true" focusable="false">
+					<use href="assets/images/svg/sprite.svg#menu"></use>
+				</svg>
+				Меню
+			</button>
+		</nav>
 	</section>
 
 	<script src="assets/scripts/index.js"></script>
 	<script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
 </body>
+
 </html>
-
-
