--- a/source/markup/header.html
+++ b/source/markup/header.html
@@ -68,7 +68,7 @@
 
 			</div>
 
-			<div class="header__themes">
+			<div class="header__themes--noactive  header__themes_media_desk">
 				<a class="button header__button-link" href="#">
 					Altcoin
 				</a>
@@ -149,11 +149,20 @@
 				Главная
 			</button>
 
-			<button class="button_form_none header__button-bottom header__button_type_search" type="button">
-				<svg class="header__svg" width="18" height="18" aria-hidden="true" focusable="false">
+			<button
+				class="user-nav__wrap user-nav__noactive button_form_none header__button-bottom header__button_type_search"
+				type="button">
+
+				<form class="user-nav__form">
+					<input class="input user-nav__input user-nav__noactive" type="text" placeholder="Найти" />
+				</form>
+
+				<svg class="user-nav__search header__svg" width="18" height="18" aria-hidden="true" focusable="false">
 					<use href="assets/images/svg/sprite.svg#search"></use>
 				</svg>
-				Поиск
+
+					Поиск
+
 			</button>
 
 			<button class="button_form_none header__button-bottom header__button_type_profile" type="button">
