--- a/source/markup/education-2.html
+++ b/source/markup/education-2.html
@@ -12,186 +12,186 @@
 
 <body class="page__body">
 
-		<header class="header-mobile container">
-			<div class="content__wrap header-mobile__content">
-				<a class="link header__logo header-mobile__logo" href="#">
+	<header class="header-mobile container">
+		<div class="content__wrap header-mobile__content">
+			<a class="link header__logo header-mobile__logo" href="#">
+				<img src="assets/images/logo.svg" alt="логотип криптобиржи Bithoven">
+			</a>
+
+			<button class="button_form_none  header__button-deck header-mobile__menu" type="button">
+				<svg class="header__svg" width="22" height="22" aria-hidden="true" focusable="false">
+					<use href="assets/images/svg/sprite.svg#deck"></use>
+				</svg>
+			</button>
+
+			<button class="button_form_none header__button-leng header-mobile__leng" type="button">
+				RU
+			</button>
+		</div>
+	</header>
+
+	<header class="header header_display_non">
+		<div class="header__menu-wrap">
+			<div class="header__menu-top">
+				<div class="header__user-wrap">
+					<button class="button_form_none  header__button-deck " type="button">
+						<svg class="header__svg" width="22" height="22" aria-hidden="true" focusable="false">
+							<use href="assets/images/svg/sprite.svg#deck"></use>
+						</svg>
+					</button>
+
+					<button class="button_form_none header__button-learn" type="button">
+						Узнать
+					</button>
+
+					<button class="button_form_none header__button-nav " type="button">
+						Темы
+					</button>
+				</div>
+
+				<a class="link header__logo" href="#">
 					<img src="assets/images/logo.svg" alt="логотип криптобиржи Bithoven">
 				</a>
 
-				<button class="button_form_none  header__button-deck header-mobile__menu" type="button">
-					<svg class="header__svg" width="22" height="22" aria-hidden="true" focusable="false">
-						<use href="assets/images/svg/sprite.svg#deck"></use>
-					</svg>
-				</button>
+				<div class="header__user-nav header__user-nav_media_deck ">
 
-				<button class="button_form_none header__button-leng header-mobile__leng" type="button">
-					RU
-				</button>
-			</div>
-		</header>
-
-		<header class="header header_display_non">
-			<div class="header__menu-wrap">
-				<div class="header__menu-top">
-					<div class="header__user-wrap">
-						<button class="button_form_none  header__button-deck " type="button">
-							<svg class="header__svg" width="22" height="22" aria-hidden="true" focusable="false">
-								<use href="assets/images/svg/sprite.svg#deck"></use>
-							</svg>
-						</button>
-
-						<button class="button_form_none header__button-learn" type="button">
-							Узнать
-						</button>
-
-						<button class="button_form_none header__button-nav " type="button">
-							Темы
-						</button>
-					</div>
-
-					<a class="link header__logo" href="#">
-						<img src="assets/images/logo.svg" alt="логотип криптобиржи Bithoven">
-					</a>
-
-					<div class="header__user-nav header__user-nav_media_deck ">
-
-						<button class="button_form_none header__button-onof " type="button">
-							<svg class="header__svg" width="18" height="18" aria-hidden="true" focusable="false">
-								<use href="assets/images/svg/sprite.svg#onof"></use>
-							</svg>
-						</button>
-
-
-						<button class="button_form_none header__button-acc" type="button">
-							<svg class="header__svg" width="25" height="25" aria-hidden="true" focusable="false">
-								<use href="assets/images/svg/sprite.svg#acc"></use>
-							</svg>
-						</button>
-
-
-						<button class="button_form_none header__button-leng" type="button">
-							RU
-						</button>
-
-
-						<button class="button_form_none header__button-sedes" type="button">
-							<svg class="header__svg" width="13" height="14" aria-hidden="true" focusable="false">
-								<use href="assets/images/svg/sprite.svg#sedes"></use>
-							</svg>
-						</button>
-					</div>
-
-					<button class="button button_color_yellow header__aut">
-						Авторизация
+					<button class="button_form_none header__button-onof " type="button">
+						<svg class="header__svg" width="18" height="18" aria-hidden="true" focusable="false">
+							<use href="assets/images/svg/sprite.svg#onof"></use>
+						</svg>
 					</button>
 
+
+					<button class="button_form_none header__button-acc" type="button">
+						<svg class="header__svg" width="25" height="25" aria-hidden="true" focusable="false">
+							<use href="assets/images/svg/sprite.svg#acc"></use>
+						</svg>
+					</button>
+
+
+					<button class="button_form_none header__button-leng" type="button">
+						RU
+					</button>
+
+
+					<button class="button_form_none header__button-sedes" type="button">
+						<svg class="header__svg" width="13" height="14" aria-hidden="true" focusable="false">
+							<use href="assets/images/svg/sprite.svg#sedes"></use>
+						</svg>
+					</button>
 				</div>
 
-				<div class="header__themes--noactive  header__themes_media_desk">
-					<a class="button header__button-link" href="#">
-						Altcoin
-					</a>
+				<button class="button button_color_yellow header__aut">
+					Авторизация
+				</button>
 
-					<a class="button header__button-link" href="#">
-						Binance
-					</a>
-
-					<a class="button header__button-link" href="#">
-						Биткоин
-					</a>
-
-					<a class="button header__button-link" href="#">
-						Блокчейн
-					</a>
-
-					<a class="button header__button-link" href="#">
-						Консенсус
-					</a>
-
-					<a class="button header__button-link" href="#">
-						DeFi
-					</a>
-
-					<a class="button header__button-link header__button-link--big" href="#">
-						Технический анализ
-					</a>
-
-					<a class="button header__button-link header__button-link--big" href="#">
-						Еще+12
-					</a>
-				</div>
-
-				<ul class="menu header__bottom">
-					<li class="header__item">
-						<a class="link header__link" href="#">
-							Глоссарий
-						</a>
-					</li>
-
-					<li class="header__item">
-						<a class="link header__link" href="#">
-							Викторина
-						</a>
-					</li>
-
-					<li class="header__item">
-						<a class="link header__link" href="#">
-							Купить криптовалюту
-						</a>
-					</li>
-
-					<li class="header__item">
-						<a class="link header__link" href="#">
-							Запуск токена
-						</a>
-					</li>
-
-					<li class="header__item">
-						<a class="link header__link" href="#">
-							Платформа
-						</a>
-					</li>
-
-					<li class="header__item">
-						<a class="link header__link" href="#">
-							Статьи
-						</a>
-					</li>
-				</ul>
 			</div>
 
-			<nav class="header__nav header__nav_display_non">
-				<button class="button_form_none header__button-bottom header__button_type_home" type="button">
-					<svg class="header__svg" width="16" height="17" aria-hidden="true" focusable="false">
-						<use href="assets/images/svg/sprite.svg#home"></use>
-					</svg>
-					Главная
-				</button>
+			<div class="header__themes--noactive  header__themes_media_desk">
+				<a class="button header__button-link" href="#">
+					Altcoin
+				</a>
 
-				<button class="button_form_none header__button-bottom header__button_type_search" type="button">
-					<svg class="header__svg" width="18" height="18" aria-hidden="true" focusable="false">
-						<use href="assets/images/svg/sprite.svg#search"></use>
-					</svg>
-					Поиск
-				</button>
+				<a class="button header__button-link" href="#">
+					Binance
+				</a>
 
-				<button class="button_form_none header__button-bottom header__button_type_profile" type="button">
-					<svg class="header__svg" width="19" height="18" aria-hidden="true" focusable="false">
-						<use href="assets/images/svg/sprite.svg#profile"></use>
-					</svg>
-					Профиль
-				</button>
+				<a class="button header__button-link" href="#">
+					Биткоин
+				</a>
 
-				<button class="button_form_none header__button-bottom header__button_type_menu" type="button">
-					<svg class="header__svg" width="22" height="18" aria-hidden="true" focusable="false">
-						<use href="assets/images/svg/sprite.svg#menu"></use>
-					</svg>
-					Меню
-				</button>
-			</nav>
-		</header>
+				<a class="button header__button-link" href="#">
+					Блокчейн
+				</a>
 
-	<article class="filter education__filter">
+				<a class="button header__button-link" href="#">
+					Консенсус
+				</a>
+
+				<a class="button header__button-link" href="#">
+					DeFi
+				</a>
+
+				<a class="button header__button-link header__button-link--big" href="#">
+					Технический анализ
+				</a>
+
+				<a class="button header__button-link header__button-link--big" href="#">
+					Еще+12
+				</a>
+			</div>
+
+			<ul class="menu header__bottom">
+				<li class="header__item">
+					<a class="link header__link" href="#">
+						Глоссарий
+					</a>
+				</li>
+
+				<li class="header__item">
+					<a class="link header__link" href="#">
+						Викторина
+					</a>
+				</li>
+
+				<li class="header__item">
+					<a class="link header__link" href="#">
+						Купить криптовалюту
+					</a>
+				</li>
+
+				<li class="header__item">
+					<a class="link header__link" href="#">
+						Запуск токена
+					</a>
+				</li>
+
+				<li class="header__item">
+					<a class="link header__link" href="#">
+						Платформа
+					</a>
+				</li>
+
+				<li class="header__item">
+					<a class="link header__link" href="#">
+						Статьи
+					</a>
+				</li>
+			</ul>
+		</div>
+
+		<nav class="header__nav header__nav_display_non">
+			<button class="button_form_none header__button-bottom header__button_type_home" type="button">
+				<svg class="header__svg" width="16" height="17" aria-hidden="true" focusable="false">
+					<use href="assets/images/svg/sprite.svg#home"></use>
+				</svg>
+				Главная
+			</button>
+
+			<button class="button_form_none header__button-bottom header__button_type_search" type="button">
+				<svg class="header__svg" width="18" height="18" aria-hidden="true" focusable="false">
+					<use href="assets/images/svg/sprite.svg#search"></use>
+				</svg>
+				Поиск
+			</button>
+
+			<button class="button_form_none header__button-bottom header__button_type_profile" type="button">
+				<svg class="header__svg" width="19" height="18" aria-hidden="true" focusable="false">
+					<use href="assets/images/svg/sprite.svg#profile"></use>
+				</svg>
+				Профиль
+			</button>
+
+			<button class="button_form_none header__button-bottom header__button_type_menu" type="button">
+				<svg class="header__svg" width="22" height="18" aria-hidden="true" focusable="false">
+					<use href="assets/images/svg/sprite.svg#menu"></use>
+				</svg>
+				Меню
+			</button>
+		</nav>
+	</header>
+
+	<article class="filter education__filter container">
 		<div class="content__top">
 			<a class="link content_link" href="#">
 				Главная >
@@ -204,82 +204,112 @@
 		<h2 class="text education__title">
 			Навигация
 		</h2>
-		<div class="filter__top">
-			<a class="button button_form_clear filter__button" href="">
-				Образовательные статьи
-			</a>
+		<div class="filter__inner">
+			<div class="filter__top-inner">
+				<div class="filter__top">
+					<a class="button button_form_clear filter__button" href="">
+						Образовательные статьи
+					</a>
 
-			<a class="button button_form_none" href="">
-				Новостные статьи
-			</a>
-		</div>
+					<a class="button button_form_none" href="">
+						Новостные статьи
+					</a>
+				</div>
 
-		<div class="filter__all">
-			<a class="button filter__button-link filter__button-link_state_ok" href="">
-				Altcoin ✓
-			</a>
+				<div class="filter__all">
+					<a class="button filter__button-link filter__button-link_state_ok" href="">
+						Altcoin ✓
+					</a>
 
-			<a class="button filter__button-link" href="">
-				Binance +
-			</a>
+					<a class="button filter__button-link" href="">
+						Binance +
+					</a>
 
-			<a class="button filter__button-link" href="">
-				Биткоин +
-			</a>
+					<a class="button filter__button-link" href="">
+						Биткоин +
+					</a>
 
-			<a class="button filter__button-link" href="">
-				Блокчейн +
-			</a>
+					<a class="button filter__button-link" href="">
+						Блокчейн +
+					</a>
 
-			<a class="button filter__button-link filter__button-link filter__button-link_state_ok" href="">
-				Консенсус ✓
-			</a>
+					<a class="button filter__button-link filter__button-link filter__button-link_state_ok" href="">
+						Консенсус ✓
+					</a>
 
-			<a class="button filter__button-link" href="">
-				DeFi +
-			</a>
+					<a class="button filter__button-link" href="">
+						DeFi +
+					</a>
 
-			<a class="button filter__button-link" href="">
-				Технический анализ +
-			</a>
+					<a class="button filter__button-link" href="">
+						Технический анализ +
+					</a>
 
-			<a class="button filter__button-link" href="">
-				Еще+12
-			</a>
-		</div>
+					<a class="button filter__button-link" href="">
+						Еще+12
+					</a>
+				</div>
+			</div>
 
-		<div class="filter__level">
-			<h2 class="text">
-				Уровень
-			</h2>
+			<div class="filter__level-inner">
+				<div class="filter__level">
+					<h2 class="text">
+						Уровень
+					</h2>
 
-			<div class="filter__level-wrap">
-				<a class="link link_level_new" href="#">
-					Новичек
-				</a>
-				<a class="link link_level_advanced" href="#">
-					Продвинутый +
-				</a>
-				<a class="link link_level_pro" href="#">
-					Профессионал +
-				</a>
+					<div class="filter__level-wrap">
+						<a class="link link_level_new" href="#">
+							Новичек
+						</a>
+						<a class="link link_level_advanced" href="#">
+							Продвинутый +
+						</a>
+						<a class="link link_level_pro" href="#">
+							Профессионал +
+						</a>
+					</div>
+				</div>
+
+				<div class="filter__time">
+					<h2 class="text">
+						Время прочтения
+					</h2>
+
+					<div class="filter__time-scrol">
+
+					</div>
+				</div>
 			</div>
 		</div>
 
-		<div class="filter__time">
-			<h2 class="text">
-				Время прочтения
-			</h2>
 
-			<div class="filter__time-scrol">
-
-			</div>
-		</div>
-
-		<div class="filter__bottom">
-
-		</div>
 	</article>
+
+	<div class="filter__bottom">
+
+		<button class="button_form_none  header__button-deck " type="button">
+			<svg class="header__svg" width="22" height="22" aria-hidden="true" focusable="false">
+				<use href="assets/images/svg/sprite.svg#deck"></use>
+			</svg>
+		</button>
+
+		<button class="button_form_none header__button-bottom header__button_type_menu" type="button">
+			<svg class="header__svg" width="22" height="18" aria-hidden="true" focusable="false">
+				<use href="assets/images/svg/sprite.svg#menu"></use>
+			</svg>
+			Меню
+		</button>
+
+		<button class="button_form_none header__button-bottom header__button_type_menu" type="button">
+			Применить
+		</button>
+
+		<button class="button_form_none header__button-bottom header__button_type_menu" type="button">
+			Очистить
+		</button>
+
+
+	</div>
 
 	<section class="education container education-2">
 		<h2 class="text education__title education-2__title">
